Homework 5.1: extracted string resources in all layout files

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="please_log_you_tempareture_today">Please Log you tempareture today</string>
     <string name="button">Button</string>
     <string name="save">Save</string>
+    <string name="why_do_we_have_fever">Why do we have fever?</string>
+    <string name="normal_human_body_temperature_is_between_36_0_37_5">Normal human body temperature is between 36.0–37.5</string>
 </resources>
